# bournemouth

./: .biome.json  AGENTS.md  Makefile  README.md  pyproject.toml  tsconfig.json
.cursor/: global.mdc  python-typing.mdc
docs/: async-sqlalchemy-with-pg-and-falcon.md  chat-endpoint-openapi.yaml  cli-guide.md  conditional-testing.md  design-proposals.md  embedding-with-hf-tei.md  mid-level-design.md  mocking-with-pytest-httpx.md  mvp-architecture.md  openrouter-completions-api-client.md  postgresql-schema-design.md  roadmap.md  testing-async-falcon-endpoints.md  testing-falcon-websocket-apis.md  testing-sqlalchemy-with-temporary-postgresql.md  using-falcon-websockets-with-msgspec-structs.md  using-falcon-with-msgspec-structs.md  websocket-chat-api-asyncapi.yaml
scripts/: start-api.sh
src/: index.ts  uuid_extensions.py
src/bournemouth/: __init__.py  app.py  auth.py  chat_service.py  chat_utils.py  cli.py  errors.py  models.py  msgspec_support.py  openrouter.py  openrouter_service.py  resource_helpers.py  resources.py  session.py  types.py
src/bournemouth/models/: __init__.py  mixins.py
src/bournemouth/unittests/: test_cli.py  test_session.py
tests/: conftest.py  test_chat_websocket.py  test_models.py  test_openrouter_client.py  test_openrouter_service.py  test_resources.py  test_stateful_chat.py  ws_helpers.py
tests/integration/: test_auth.py
