[project]
name = "bournemouth"
version = "0.1.0"
description = "Raggy Graph Chat"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "COPYING" }
authors = [{ name = "Payton McIntosh", email = "pmcintosh@df12.net" }]
dependencies = [
  "falcon>=3.1",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "neo4j>=5.20",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pytest-mock",
  "ruff>=0.4.3",
  "pyright"
]
docs = [
  "sphinx>=5.0",
  "sphinx-rtd-theme"
]

[project.scripts]
# placeholder for future CLI entry points

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportMissingModuleSource = false
reportMissingImports = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportAttributeAccessIssue = false

[tool.ruff]
line-length = 88
select = ["E", "F", "RUF"]

